Refactor Cocktail *Replaced field Glass -> Set<Glass> (@ManyToOne connection to Glass) *Restructure code
Refactor CocktailConfig
*Add more glasses
*Restructure code

Rewrite findByGlass in CocktailRepository

Refactor CocktailRequestDTO
*Replaced field GlassDTO -> Set<String> (glasses names)
*Remove min size in ingredients
*Change validation message
*Restructure code

Refactor CocktailResponseDTO
*Replaced field glass -> Set<String> (glasses names)
*Restructure code

Refactor CocktailService
*Replace GlassRepository, IngredientRepository -> GlassServiceImpl, IngredientServiceImpl
*Add getCocktailsByGlass, getCocktailsIn

Delete CocktailServiceTest